objects/QIDC__OM_Code_ims__c.object
<CustomObject>
    <description>This object is used to store codes from OrgManager for picklist fields.</description>
    <fields>
        <fullName>QIDC__Code_Role_ims__c</fullName>
        <description>Code group of the attribute.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Code group of the attribute.</inlineHelpText>
        <label>Code Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Code_Unique_Id_ims__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code Unique Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Label_ims__c</fullName>
        <description>Default label for OrgManager code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Default label for OrgManager code.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__OM_Last_Modified_Date_ims__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OM Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <label>OrgManager Code</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Code_Role_ims__c</columns>
        <columns>QIDC__Code_Unique_Id_ims__c</columns>
        <columns>QIDC__Label_ims__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>QIDC__OM_Last_Modified_Date_ims__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgManager Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>